--- a/templates/base.html
+++ b/templates/base.html
@@ -255,6 +255,14 @@
                             </a>
                                        
                         </div><!-- End .cart-dropdown -->
+                            
+                        <div class="dropdown cart-dropdown">
+                            <a href="{% url "userprofile" %}" class="dropdown-toggle" role="button">
+                                <i class="icon-user"></i>
+                            </a>  
+                        </div><!-- End .cart-dropdown -->
+
+
                     </div><!-- End .header-right -->
                 </div><!-- End .container -->
             </div><!-- End .header-middle -->
