--- a/templates/user/cart/cart.html
+++ b/templates/user/cart/cart.html
@@ -234,7 +234,7 @@
                                 </tbody>
                             </table><!-- End .table table-summary -->
 
-                            {% comment %} <a href="{% url 'checkout' %}" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED {% endcomment %}
+                            <a href="{% url 'checkout' %}" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED
                                 TO
                                 CHECKOUT</a>
                         </div><!-- End .summary -->
