--- a/templates/admin/dashboardbase.html
+++ b/templates/admin/dashboardbase.html
@@ -161,6 +161,16 @@
               </a>
             </li>
 
+
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'orderlist' %}" aria-expanded="false"> 
+               <span>
+                 <i class="ti ti-ship"></i>
+               </span>
+               <span class="hide-menu">order</span>
+             </a>
+           </li>
+
             <!-- <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'productvariant' %}" aria-expanded="false"> 
                <span>
@@ -173,7 +183,7 @@
            <li class="sidebar-item">
             <a class="sidebar-link" href="{% url 'productsize' %}" aria-expanded="false"> 
              <span>
-               <i class="ti ti-typography"></i>
+               <i class="ti ti-dimensions"></i>
              </span>
              <span class="hide-menu">Size</span>
            </a>
